--- a/gestion-navetane-main/package.json
+++ b/gestion-navetane-main/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://kane-crypte.github.io/projetNavetane",
   "name": "vite_react_shadcn_ts",
   "private": true,
   "version": "0.0.0",
@@ -8,7 +9,11 @@
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
+
+
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
